Änderungen von Aykut

--- a/aerzte_apotheker.html
+++ b/aerzte_apotheker.html
@@ -21,7 +21,7 @@
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Navbar brand -->
-            <a class="navbar-brand px-5" href="/index.html"> <img src="/static/logo_1.png" alt=""></a>
+            <a class="navbar-brand px-5" href="/index.html"> <img src="static/logo_1.png" alt=""></a>
 
             <!-- Left links -->
             <ul class="navbar-nav pe-5 mb-2 mb-lg-0">
@@ -57,7 +57,7 @@
 
     <div class="jumbotron">
         <div class="img-cont">
-            <img src="/static/template-img.jpeg" alt="">
+            <img src="static/template-img.jpeg" alt="">
         </div>
     </div>
 
@@ -67,7 +67,7 @@
             <div class="col-1"></div>
             <div class="col-8">
                 <div class="sub-content p-5 bg-beige">
-                    <h2>Finanzberatung für Ärzte, Apotheker und Heilberufe</h2>
+                    <h2>Finanzberatung für Ärzte und Apotheker</h2>
                     <p style="font-weight: bold">Sie planen Ihre Niederlassung oder suchen eine Praxis zum Kauf oder
                         Übernahme?</p>
                     <h3 style="">Erste Schritte zur Niederlassung und Existenzgründung für Ärzte/innen
@@ -237,13 +237,13 @@
                     </div>
                     <div class="col-4 icon-cont-contact">
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Termin.png" alt="">
+                            <img src="static/icons/Icon_Termin.png" alt="">
                         </div>
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Email.png" alt="">
+                            <img src="static/icons/Icon_Email.png" alt="">
                         </div>
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Telefon.png" alt="">
+                            <img src="static/icons/Icon_Telefon.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -270,7 +270,7 @@
                 <!--Grid column-->
                 <div class="col-md-6">
                     <div class="icon-footer-div py-2">
-                        <img src="/static/logo_2.png" alt="">
+                        <img src="static/logo_2.png" alt="">
                         <div class="soc">
 
                             <a href="#" class="icon facebook" title="Facebook">
