--- a/betr_alt.html
+++ b/betr_alt.html
@@ -22,7 +22,7 @@
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Navbar brand -->
-            <a class="navbar-brand px-5" href="/index.html"> <img src="/static/logo_1.png" alt=""></a>
+            <a class="navbar-brand px-5" href="/index.html"> <img src="static/logo_1.png" alt=""></a>
 
             <!-- Left links -->
             <ul class="navbar-nav pe-5 mb-2 mb-lg-0">
@@ -58,7 +58,7 @@
 
     <div class="jumbotron">
         <div class="img-cont">
-            <img src="/static/template-img.jpeg" alt="">
+            <img src="static/template-img.jpeg" alt="">
         </div>
     </div>
 
@@ -68,8 +68,7 @@
             <div class="col-8">
                 <div class="sub-content p-5 bg-beige">
                     <h2>Betriebliche Altersvorsorge</h2>
-                    <p style="font-weight: bold">Grundlegendes Problem in Deutschland.</p>
-                    <h3 style="font-weight: bold">Altersarmut</h3>
+                    <p style="font-weight: bold">Grundlegendes Problem in Deutschland ist die Altersarmut! Diese wird durch den demographischen Wandel befeuert.</p>
                     <p class='p-text' style="font-style: italic;">
                         Das deutsche Rentensystem gerät zunehmend in Schieflage. <br> Demnach wächst die Zahl der
                         Rentner stärker
@@ -83,7 +82,7 @@
                         wichtiger werdende private Altersvorsorge.
                     </p>
                     <div class="img-cont-content my-3 mb-5">
-                        <img src="/static/pictures_betr-alt/1.png" alt="">
+                        <img src="static/pictures_betr-alt/1.png" alt="">
                     </div>
                     <h3 class="my-3" style="font-weight: bold">Das 3 Schichten Modell in Deutschland</h3>
                     <p class="p-text ">
@@ -94,7 +93,7 @@
                         Altersvorsorgeprodukte in der jeweiligen Schicht steuerlich behandelt werden.
                     </p>
                     <div class="img-cont-content my-3 mb-5">
-                        <img src="/static/pictures_betr-alt/2.png" alt="">
+                        <img src="static/pictures_betr-alt/2.png" alt="">
                     </div>
                     <p style='font-weight: bold; font-size: large;'>
                         Die gesetzliche Rentenversicherung kann nur eine „Grundversorgung“ bieten.
@@ -110,34 +109,7 @@
                         Diese Versorgungslücke kann mit einer betrieblichen Altersversorgung (Schicht 2) zum Teil als
                         Zusatzversorgung geschlossen werden.
                     </p>
-                    <h3 class="my-3" style="font-weight: bold">Wie funktioniert die betriebliche Altersversorgung?</h3>
-                    <p style='font-weight: bold; font-size: large;'>
-                        Beispiel: Mit Nettoaufwand mehr sparen!
-                    </p>
-                    <div class="img-cont-content my-3 mb-5">
-                        <img src="/static/pictures_betr-alt/3.png" alt="">
-                    </div>
-                    <p class="p-text">
-                        Das Gesetz zur Verbesserung der betrieblichen Altersversorgung (BetrAVG) gewährt in § 1a BetrAVG
-                        einen Rechtsanspruch des Arbeitnehmers gegen seinen Arbeitgeber auf Entgeltumwandlung.
-                        <br>
-                        <br>
-                        Sie haben
-                        einen Rechtsanspruch auf eine betriebliche Altersversorgung durch Entgeltumwandlung. Die
-                        bekannteste Form ist die (ein Teil der Durchführungsweg) Direktversicherung. Innerhalb
-                        bestimmter Grenzen sind Ihre Beiträge steuer- und sozialversicherungsfrei. Das bedeutet für Sie:
-                        Der Nettoaufwand für Ihre Altersversorgung sinkt.
-                        <br>
-                        <br>
-                        Seit 2018 sind Arbeitgeber gefordert, die
-                        betriebliche Altersvorsorge (bAV) aktiv anzubieten. Mit dem BRSG (Betriebsrentenstärkungsgesetz)
-                        wurde zudem ein Arbeitgeberzuschuss verpflichtend, den Unternehmer ab 2022 auch in bestehenden
-                        Verträgen umsetzen müssen.
-                    </p>
-                    <h3 class="my-3" style="font-weight: bold">Konstruktion der Direktversicherung</h3>
-                    <div class="img-cont-content my-3 mb-5">
-                        <img src="/static/pictures_betr-alt/4.png" alt="">
-                    </div>
+                    
                     <h3 class="my-3" style="font-weight: bold">Welche weitere Durchführungswege gibt es noch ?</h3>
                     <h5 class="my-3" style="font-weight: bold">
                         • Pensionskasse <br>
@@ -148,10 +120,10 @@
                         <h3 class="my-3" style="font-weight: bold">Unsere Unterstützung für Sie als Arbeitgeber im
                             Bereich der Verwaltung</h3>
                         <div class="img-cont-content my-3 mb-5">
-                            <img src="/static/pictures_betr-alt/5.png" alt="">
+                            <img src="static/pictures_betr-alt/5.png" alt="">
                         </div>
                         <div class="img-cont-content my-3 mb-5">
-                            <img src="/static/pictures_betr-alt/6.png" alt="">
+                            <img src="static/pictures_betr-alt/6.png" alt="">
                         </div>
                 </div>
             </div>
@@ -172,13 +144,13 @@
                     </div>
                     <div class="col-4 icon-cont-contact">
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Termin.png" alt="">
+                            <img src="static/icons/Icon_Termin.png" alt="">
                         </div>
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Email.png" alt="">
+                            <img src="static/icons/Icon_Email.png" alt="">
                         </div>
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Telefon.png" alt="">
+                            <img src="static/icons/Icon_Telefon.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -205,7 +177,7 @@
                 <!--Grid column-->
                 <div class="col-md-6">
                     <div class="icon-footer-div py-2">
-                        <img src="/static/logo_2.png" alt="">
+                        <img src="static/logo_2.png" alt="">
                         <div class="soc">
 
                             <a href="#" class="icon facebook" title="Facebook">
