--- a/finanzierung.html
+++ b/finanzierung.html
@@ -22,7 +22,7 @@
         <div class="container-fluid">
             <!-- Navbar brand -->
             <a class="navbar-brand px-5" href="/index.html">
-                <img src="/static/logo_1.png" alt="">
+                <img src="static/logo_1.png" alt="">
             </a>
 
             <!-- Left links -->
@@ -59,7 +59,7 @@
 
     <div class="jumbotron">
         <div class="img-cont">
-            <img src="/static/template-img.jpeg" alt="">
+            <img src="static/template-img.jpeg" alt="">
         </div>
     </div>
     <div class="jumbrotron">
@@ -124,9 +124,7 @@
                         Ist mit einem steigenden Zinsen (hoch) in den nächsten Jahren zu rechnen? Falls ja, dann lohnt
                         sich die Anschlussfinanzierung. Bei dem <b> Forward-Kredit </b>vereinbaren Sie den neuen Zins
                         bereits
-                        lange, bevor die alte Zinsbindung ausläuft. Ein <b>Forward-Darlehen </b> ist teurer als ein
-                        normaler
-                        Baukredit. Allerdings sind die <b> Forward-Aufschläge </b>aktuell besonders niedrig. Hier muss
+                        lange, bevor die alte Zinsbindung ausläuft. Hier muss
                         genau
                         abgewogen werden, was mehr Sinn macht.
                     </p>
@@ -149,13 +147,13 @@
                     </div>
                     <div class="col-4 icon-cont-contact">
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Termin.png" alt="">
+                            <img src="static/icons/Icon_Termin.png" alt="">
                         </div>
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Email.png" alt="">
+                            <img src="static/icons/Icon_Email.png" alt="">
                         </div>
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Telefon.png" alt="">
+                            <img src="static/icons/Icon_Telefon.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -182,7 +180,7 @@
                 <!--Grid column-->
                 <div class="col-md-6">
                     <div class="icon-footer-div py-2">
-                        <img src="/static/logo_2.png" alt="">
+                        <img src="static/logo_2.png" alt="">
                         <div class="soc">
 
                             <a href="#" class="icon facebook" title="Facebook">
