--- a/kontakt.html
+++ b/kontakt.html
@@ -21,7 +21,7 @@
         <div class="container-fluid">
             <!-- Navbar brand -->
             <a class="navbar-brand px-5" href="/index.html">
-                <img src="/static/logo_1.png" alt="">
+                <img src="static/logo_1.png" alt="">
             </a>
 
             <!-- Left links -->
@@ -58,7 +58,7 @@
 
     <div class="jumbotron">
         <div class="img-cont">
-            <img src="/static/template-img.jpeg" alt="">
+            <img src="static/template-img.jpeg" alt="">
         </div>
     </div>
     <div class="container my-5">
@@ -141,10 +141,11 @@
                 </div>
 
             </form>
-            <h3>Oder rufen Sie uns einfach an!</h3>
+            <h3>Oder rufen Sie uns einfach an! Videoberatungen jederzeit zu allen Themen möglich.</h3>
             <p class = "p-text"> Gerne Sind wir für Sie auch telefonisch erreichbar.</p>
-            <p class="p-text" style="font-weight: bold; font-size:large">0800 / 789 85 43</p>
-            <p class="p-text"> (Mo - Fr: 08:00 - 18:00 Uhr)</p>
+            <p class="p-text" style="font-weight: bold; font-size:large">Telefonnummer: 0170 / 540 79 67</p>
+            <p class="p-text" style="font-weight: bold; font-size:large">E-Mail Adresse: tuerk@med-pf.de</p>
+            <p class="p-text"> (Mo - Fr: 08:00 - 20:00 Uhr)</p>
         </div>
     </div>
 
@@ -158,7 +159,7 @@
                 <!--Grid column-->
                 <div class="col-md-6">
                     <div class="icon-footer-div py-2">
-                        <img src="/static/logo_2.png" alt="">
+                        <img src="static/logo_2.png" alt="">
                         <div class="soc">
 
                             <a href="#" class="icon facebook" title="Facebook">
