--- a/verm_management.html
+++ b/verm_management.html
@@ -22,7 +22,7 @@
         <div class="container-fluid">
             <!-- Navbar brand -->
             <a class="navbar-brand px-5" href="/index.html">
-                <img src="/static/logo_1.png" alt="">
+                <img src="static/logo_1.png" alt="">
             </a>
 
             <!-- Left links -->
@@ -59,7 +59,7 @@
 
     <div class="jumbotron">
         <div class="img-cont">
-            <img src="/static/template-img.jpeg" alt="">
+            <img src="static/template-img.jpeg" alt="">
         </div>
     </div>
     <div class="jumbrotron">
@@ -87,16 +87,15 @@
                         Wie verfügbar muss Ihr Vermögen sein?
                     </p>
                     <p style='font-weight: bold; font-size: large;'>
-                        Jede Geldanlage erfordert Kompromisse, denn die drei Ziele (Rendite, Sicherheit und Liquidität)
                         können nie gleichzeitig erreicht werden.
                     </p>
                     <div class="img-cont-content my-3 mb-5">
-                        <img src="/static/pictures_verm_ber/1.png" alt="">
+                        <img src="static/pictures_verm_ber/1.png" alt="">
                     </div>
                     <p style='font-weight: bold; font-size: large;'>
                         Beispiele in der Praxis:</p>
                     <div class="img-cont-content my-3 mb-5">
-                        <img src="/static/pictures_verm_ber/2.png" alt="">
+                        <img src="static/pictures_verm_ber/2.png" alt="">
                     </div>
                     <p class="p-text">
                         Ein <b>Investor muss immer einen Kompromiss </b> machen und sich überlegen, welche Ziele für ihn
@@ -104,26 +103,6 @@
                         dass es ein Finanzprodukt gibt, das alle drei Ziele gleichzeitig erfüllt.
 
                     </p>
-                    <p style='font-weight: bold; font-size: large;'>
-                        Weitere Störfaktoren der Geldanlage sind?</p>
-                    <p style='font-weight: bold; font-size: large;'>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-arrow-right" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd"
-                                d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
-                        </svg> Inflation, Steuern
-                    </p>
-
-                    <p style='font-weight: bold; font-size: large;'>
-                        Wie können Geldanlageziele am besten erreicht werden?</p>
-                    <p style='font-weight: bold; font-size: large;'>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-arrow-right" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd"
-                                d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
-                        </svg> Risikostreuung
-                    </p>
-                    <p class="p-text"> Ziele setzen und Strategie entwickeln</p>
                 </div>
             </div>
             <div class="col-3">
@@ -143,13 +122,13 @@
                     </div>
                     <div class="col-4 icon-cont-contact">
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Termin.png" alt="">
+                            <img src="static/icons/Icon_Termin.png" alt="">
                         </div>
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Email.png" alt="">
+                            <img src="static/icons/Icon_Email.png" alt="">
                         </div>
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Telefon.png" alt="">
+                            <img src="static/icons/Icon_Telefon.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -178,7 +157,7 @@
                 <!--Grid column-->
                 <div class="col-md-6">
                     <div class="icon-footer-div py-2">
-                        <img src="/static/logo_2.png" alt="">
+                        <img src="static/logo_2.png" alt="">
                         <div class="soc">
 
                             <a href="#" class="icon facebook" title="Facebook">
