--- a/versicherung.html
+++ b/versicherung.html
@@ -21,7 +21,7 @@
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Navbar brand -->
-            <a class="navbar-brand px-5" href="/index.html"> <img src="/static/logo_1.png" alt=""></a>
+            <a class="navbar-brand px-5" href="/index.html"> <img src="static/logo_1.png" alt=""></a>
 
             <!-- Left links -->
             <ul class="navbar-nav pe-5 mb-2 mb-lg-0">
@@ -57,7 +57,7 @@
 
     <div class="jumbotron">
         <div class="img-cont">
-            <img src="/static/template-img.jpeg" alt="">
+            <img src="static/template-img.jpeg" alt="">
         </div>
     </div>
     <div class="jumbrotron">
@@ -65,11 +65,7 @@
             <div class="col-1"></div>
             <div class="col-8">
                 <div class="sub-content p-5 bg-beige">
-                    <h2>Versicherungen</h2>
-                    <p class="p-text">
-                        Versicherungslösungen und Versicherungskonzepte, Ganzheitliche und Individuelle Finanzkonzepte
-                        für diese Zielgruppe
-                    </p>
+                    <h2>Versicherungslösungen für Akademiker und anspruchsvolle Kunden</h2>
                     <p style='font-weight: bold; font-size: large;'>
                         Welche Anforderungen stellen Akademiker an Versicherungspartnern?
                     </p>
@@ -91,7 +87,7 @@
                         einher.
                     </p>
                     <div class="img-cont-content my-3 mb-5">
-                        <img src="/static/pictures_vers/1.png" alt="">
+                        <img src="static/pictures_vers/1.png" alt="">
                     </div>
                     <h4>
                         <br>
@@ -108,30 +104,25 @@
                         Gesetzlicher Krankenversicherung versus private Krankenversicherung
                     </p>
                     <div class="img-cont-content my-3 mb-5">
-                        <img src="/static/pictures_vers/2.png" alt="">
+                        <img src="static/pictures_vers/2.png" alt="">
                     </div>
                     <p style='font-weight: bold; font-size: large;'>
                         Beitragsentwicklung der Gesetzlicher (GKV) und Privater Krankenversicherung (PKV)
                     </p>
                     <div class="img-cont-content my-3 mb-5">
-                        <img src="/static/pictures_vers/3.png" alt="">
+                        <img src="static/pictures_vers/3.png" alt="">
                     </div>
 
                     <h4>
                         Krankentagegeld (KTG)
                     </h4>
                     <p class="p-text">
-                        Das KTG wird für jeden Kalendertag bezahlt, an dem Sie krankgeschrieben sind. Es richtet sich
-                        nach der Höhe Ihres regelmäßigen Einkommens: Das Krankengeld beträgt 70 Prozent vom
-                        Bruttoeinkommen, jedoch höchstens 90 Prozent vom Netto.Einmalzahlungen wie Weihnachtsgeld werden
-                        berücksichtigt.
-                        <br><br>
                         Die Krankentagegeld-Versicherung ist in Deutschland eine freiwillige
                         Zusatzversicherung für Angestellte, Freiberufler und Selbständige. Im Krankheitsfall lassen sich
                         mit einer solchen Versicherung mögliche Einkommensausfälle ausgleichen oder mindern.
                     </p>
                     <h4>
-                        Haftplfichtversicherung
+                        Haftplfichtversicherung - Absolutes Muss!
                     </h4>
                     <p class="p-text">
                         Warum ist eine Haftpflichtversicherung wichtig ?
@@ -209,13 +200,13 @@
                     </div>
                     <div class="col-4 icon-cont-contact">
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Termin.png" alt="">
+                            <img src="static/icons/Icon_Termin.png" alt="">
                         </div>
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Email.png" alt="">
+                            <img src="static/icons/Icon_Email.png" alt="">
                         </div>
                         <div class="my-1 icon-contact">
-                            <img src="/static/icons/Icon_Telefon.png" alt="">
+                            <img src="static/icons/Icon_Telefon.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -244,7 +235,7 @@
                 <!--Grid column-->
                 <div class="col-md-6">
                     <div class="icon-footer-div py-2">
-                        <img src="/static/logo_2.png" alt="">
+                        <img src="static/logo_2.png" alt="">
                         <div class="soc">
 
                             <a href="#" class="icon facebook" title="Facebook">
