--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container-fluid">
             <!-- Navbar brand -->
             <a class="navbar-brand px-5" href="/index.html">
-                <img src="/static/logo_1.png" alt="">
+                <img src="static/logo_1.png" alt="" style="height: 22px;">
             </a>
 
             <!-- Left links -->
@@ -96,30 +96,30 @@
     <div class="container-flow bg-beige py-5">
         <div class="row py-5">
             <div class="col-12 text-center reveal">
-                <h3 style="color:#98C00A ">„Eine Investition in Wissen bringt immer noch die besten Zinsen“</h3>
-                <h4 style="font-style: italic;">Benjamin Franklin</h4>
+                <h2 style="color:#98C00A; font-family: handwrittenFont;">„Eine Investition in Wissen bringt immer noch die besten Zinsen“</h2>
+                <h3 style="font-style: italic;">Benjamin Franklin</h3>
             </div>
         </div>
         <div class="row py-5 justify-content-center text-center reveal">
             <h3 class="py-5">Was interessiert Sie?</h3>
             <a href="betr_alt.html" class="col-2 card-link mx-2 py-5">
-                <img src="/static/icons/Icon_BA.png" alt="icon">
+                <img src="static/icons/Icon_BA.png" alt="icon">
                 <h4 class="mt-4">Betriebliche Altersversorgung</h4>
             </a>
             <a href="/aerzte_apotheker.html" class="col-2 card-link mx-2 py-5">
-                <img src="/static/icons/Icon_Ärzte.png" alt="icon">
+                <img src="static/icons/Icon_Ärzte.png" alt="icon">
                 <h4 class="mt-4">Finanzberatung für Ärzte Apotheker</h4>
             </a>
             <a href="/verm_management.html" class="col-2 card-link mx-2 py-5">
-                <img src="/static/icons/Icon_Vermögen.png" alt="icon">
+                <img src="static/icons/Icon_Vermögen.png" alt="icon">
                 <h4 class="mt-4">Vermögens- <br> management</h4>
             </a>
             <a href="/finanzierung.html" class="col-2 card-link mx-2 py-5">
-                <img src="/static/icons/Icon_Finanzen.png" alt="icon">
+                <img src="static/icons/Icon_Finanzen.png" alt="icon">
                 <h4 class="mt-4">Finanzierung</h4>
             </a>
             <a href="/versicherung.html" class="col-2 card-link mx-2 py-5">
-                <img src="/static/icons/Icon_Versicherung.png" alt="icon">
+                <img src="static/icons/Icon_Versicherung.png" alt="icon">
                 <h4 class="mt-4">Versicherungen</h4>
             </a>
 
@@ -130,10 +130,10 @@
         <div class="row h-100">
             <div class="col-sm-6 png-pic-cont">
                 <div class="png-design">
-                    <img class src="/static/design_comp-purple.png" alt="png-design">
+                    <img class src="static/design_comp-purple.png" alt="png-design">
                 </div>
                 <div class="design-pic">
-                    <img src="/static/template-img.jpeg" alt="">
+                    <img src="static/template-img.jpeg" alt="">
                 </div>
             </div>
 
@@ -147,10 +147,6 @@
                         Altersversorgung (bAV) für die Alterssicherung von Arbeitnehmern erheblich an Bedeutung
                         gewonnen.
                         <br>
-                        <br>
-                        Betriebliche Altersversorgung Bezeichnet Leistungen Der Alters-, Invaliditäts- Und/Oder
-                        Hinterbliebenenversorgung, Die Arbeitnehmern Aus Anlass Des Arbeitsverhältnisses Von Ihrem
-                        Arbeitgeber Zugesagt Werden.
                     </p>
                     <a href="/betr_alt.html">
                         <button class="btn" style="background-color:#610556; color: white">Mehr erfahren
@@ -169,7 +165,7 @@
     <div class="container-flow bg-beige py-5">
         <div class="row text-center justify-content-center py-4">
             <div class="col-8">
-                <h3 class="py-5">Wir bieten ihnen Finanzberatung für Ärzte <br> Apotheker und Heilpraktiker an</h3>
+                <h3 class="py-5">Wir bieten ihnen Finanzberatung für Ärzte <br> Apotheker an</h3>
                 <p class='p-text'>Qualifizierte Finanzberatung für Ärzte, Zahnärzte und Apotheker. <br> Wir beraten und
                     begleiten seit 1999
                     Human Ärzte, Zahnärzte und Apotheker
@@ -180,25 +176,25 @@
         <div class="row justify-content-center text-center py-4">
             <div class="col-2 card-link-2 mx-2">
                 <div class="my-3 mx-4">
-                    <img src="/static/template-img.jpeg" alt="icon">
+                    <img src="static/template-img.jpeg" alt="icon">
                 </div>
                 <h4 class="mt-3">Existenzgründung</h4>
             </div>
             <div class="col-2 card-link-2 mx-4">
                 <div class="my-3 mx-4">
-                    <img src="/static/template-img.jpeg" alt="icon">
+                    <img src="static/template-img.jpeg" alt="icon">
                 </div>
                 <h4 class="mt-3">Praxisfinanzierung</h4>
             </div>
             <div class="col-2 card-link-2 mx-4">
                 <div class="my-3 mx-4">
-                    <img src="/static/template-img.jpeg" alt="icon">
+                    <img src="static/template-img.jpeg" alt="icon">
                 </div>
                 <h4 class="mt-3">Praxisversicherung</h4>
             </div>
             <div class="col-2 card-link-2 mx-4">
                 <div class="my-3 mx-4">
-                    <img src="/static/template-img.jpeg" alt="icon">
+                    <img src="static/template-img.jpeg" alt="icon">
                 </div>
                 <h4 class="mt-3">Praxisübernahme <br> und Verkauf</h4>
             </div>
@@ -224,9 +220,7 @@
                     <h3> Vermögensmanagement</h3>
 
                     <p class="p-text my-3">
-                        Die Möglichkeiten attraktiver Geldanlagen sind vielfältig. Die beste Vermögensanlage verbindet
-                        fundiertes Expertenwissen mit den individuellen Bedürfnissen jener Menschen, die dieses Vermögen
-                        aufgebaut haben.
+                        Die Möglichkeiten attraktiver Geldanlagen sind vielfältig.
                     </p>
                     <a href="/verm_management.html">
                         <button class="btn" style="background-color:#98C00A; color: white">Mehr erfahren
@@ -240,10 +234,10 @@
             </div>
             <div class="col-sm-6 png-pic-cont">
                 <div class="png-design-right">
-                    <img class src="/static/design-comp-green.png" alt="png-design">
+                    <img class src="static/design-comp-green.png" alt="png-design">
                 </div>
                 <div class="design-pic-right">
-                    <img src="/static/template-img.jpeg" alt="">
+                    <img src="static/template-img.jpeg" alt="">
                 </div>
             </div>
         </div>
@@ -253,10 +247,10 @@
         <div class="row h-100">
             <div class="col-sm-6 png-pic-cont">
                 <div class="png-design">
-                    <img class src="/static/design_comp-purple.png" alt="png-design">
+                    <img class src="static/design_comp-purple.png" alt="png-design">
                 </div>
                 <div class="design-pic">
-                    <img src="/static/template-img.jpeg" alt="">
+                    <img src="static/template-img.jpeg" alt="">
                 </div>
             </div>
 
@@ -310,10 +304,10 @@
             </div>
             <div class="col-sm-6 png-pic-cont">
                 <div class="png-design-right">
-                    <img class src="/static/design-comp-green.png" alt="png-design">
+                    <img class src="static/design-comp-green.png" alt="png-design">
                 </div>
                 <div class="design-pic-right">
-                    <img src="/static/template-img.jpeg" alt="">
+                    <img src="static/template-img.jpeg" alt="">
                 </div>
             </div>
         </div>
@@ -329,7 +323,7 @@
                 <!--Grid column-->
                 <div class="col-md-6">
                     <div class="icon-footer-div py-2">
-                        <img src="/static/logo_2.png" alt="">
+                        <img src="static/logo_2.png" alt="">
                         <div class="soc">
 
                             <a href="#" class="icon facebook" title="Facebook">
