--- a/aerzte_apotheker.html
+++ b/aerzte_apotheker.html
@@ -67,7 +67,7 @@
             <div class="col-1"></div>
             <div class="col-8">
                 <div class="sub-content p-5 bg-beige">
-                    <h2>Finanzberatung für Ärzte und Apotheker 2</h2>
+                    <h2>Finanzberatung für Ärzte und Apotheker</h2>
                     <p style="font-weight: bold">Sie planen Ihre Niederlassung oder suchen eine Praxis zum Kauf oder
                         Übernahme?</p>
                     <h3 style="">Erste Schritte zur Niederlassung und Existenzgründung für Ärzte/innen
