--- a/aerzte_apotheker.html
+++ b/aerzte_apotheker.html
@@ -26,10 +26,10 @@
             <!-- Left links -->
             <ul class="navbar-nav pe-5 mb-2 mb-lg-0">
                 <li class="nav-item px-2">
-                    <a class="nav-link active" aria-current="page" href="/index.html">Startseite</a>
+                    <a class="nav-link active" aria-current="page" href="medfinance/index.html">Startseite</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="/betr_alt.html">Betriebliche <br> Altersversorgung</a>
+                    <a class="nav-link" href="medfinance/betr_alt.html">Betriebliche <br> Altersversorgung</a>
                 </li>
                 <li class="nav-item px-2">
                     <a class="nav-link" href="/aerzte_apotheker.html">Finanzberatung für <br>Ärzte und Apotheker</a>
