--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a class="nav-link active" aria-current="page" href="/index.html">Startseite</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="medfinance/betr_alt.html">Betriebliche <br> Altersversorgung</a>
+                    <a class="nav-link" href="/betr_alt.html">Betriebliche <br> Altersversorgung</a>
                 </li>
                 <li class="nav-item px-2">
                     <a class="nav-link" href="/aerzte_apotheker.html">Finanzberatung für <br>Ärzte und Apotheker</a>
