--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
                     <a class="nav-link" href="betr_alt.html">Betriebliche <br> Altersversorgung</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="/aerzte_apotheker.html">Finanzberatung für <br>Ärzte und Apotheker</a>
+                    <a class="nav-link" href="aerzte_apotheker.html">Finanzberatung für <br>Ärzte und Apotheker</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="/verm_management.html">Vermögensmanagement</a>
+                    <a class="nav-link" href="verm_management.html">Vermögensmanagement</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="/finanzierung.html">Finanzierung</a>
+                    <a class="nav-link" href="finanzierung.html">Finanzierung</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="/versicherung.html">Versicherungen</a>
+                    <a class="nav-link" href="versicherung.html">Versicherungen</a>
                 </li>
                 <li class="nav-item px-2">
                     <!-- <a class="nav-link" href="#">Kontakt</a> -->
-                    <a href="/kontakt.html" class="nav-link px-4 nav-btn">Kontakt</a>
+                    <a href="kontakt.html" class="nav-link px-4 nav-btn">Kontakt</a>
                 </li>
             </ul>
             <!-- Left links -->
@@ -106,19 +106,19 @@
                 <img src="static/icons/Icon_BA.png" alt="icon">
                 <h4 class="mt-4">Betriebliche Altersversorgung</h4>
             </a>
-            <a href="/aerzte_apotheker.html" class="col-2 card-link mx-2 py-5">
+            <a href="aerzte_apotheker.html" class="col-2 card-link mx-2 py-5">
                 <img src="static/icons/Icon_Ärzte.png" alt="icon">
                 <h4 class="mt-4">Finanzberatung für Ärzte Apotheker</h4>
             </a>
-            <a href="/verm_management.html" class="col-2 card-link mx-2 py-5">
+            <a href="verm_management.html" class="col-2 card-link mx-2 py-5">
                 <img src="static/icons/Icon_Vermögen.png" alt="icon">
                 <h4 class="mt-4">Vermögens- <br> management</h4>
             </a>
-            <a href="/finanzierung.html" class="col-2 card-link mx-2 py-5">
+            <a href="finanzierung.html" class="col-2 card-link mx-2 py-5">
                 <img src="static/icons/Icon_Finanzen.png" alt="icon">
                 <h4 class="mt-4">Finanzierung</h4>
             </a>
-            <a href="/versicherung.html" class="col-2 card-link mx-2 py-5">
+            <a href="versicherung.html" class="col-2 card-link mx-2 py-5">
                 <img src="static/icons/Icon_Versicherung.png" alt="icon">
                 <h4 class="mt-4">Versicherungen</h4>
             </a>
@@ -148,7 +148,7 @@
                         gewonnen.
                         <br>
                     </p>
-                    <a href="/betr_alt.html">
+                    <a href="betr_alt.html">
                         <button class="btn" style="background-color:#610556; color: white">Mehr erfahren
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
@@ -200,7 +200,7 @@
             </div>
         </div>
         <div class="row justify-content-center text-center">
-            <a href="/betr_alt.html">
+            <a href="betr_alt.html">
                 <button class="btn">Mehr erfahren
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
@@ -222,7 +222,7 @@
                     <p class="p-text my-3">
                         Die Möglichkeiten attraktiver Geldanlagen sind vielfältig.
                     </p>
-                    <a href="/verm_management.html">
+                    <a href="verm_management.html">
                         <button class="btn" style="background-color:#98C00A; color: white">Mehr erfahren
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
@@ -267,7 +267,7 @@
                         ob als Wohnbaufinanzierung oder Existenzgründung. Gemeinsam mit Ihnen entwickeln wir das
                         passende Finanzierungskonzept für Ihr Vorhaben.
                     </p>
-                    <a href="/finanzierung.html">
+                    <a href="finanzierung.html">
                         <button class="btn" style="background-color:#610556; color: white">Mehr erfahren
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
@@ -292,7 +292,7 @@
                         Wir beraten Sie individuell und auf Ihre Bedürfnisse zu geschnitten. Je nach Zielgruppe und
                         Ansprüchen suchen wir Ihnen die geeigneteste Versicherungslösung aus.
                     </p>
-                    <a href="/versicherung.html">
+                    <a href="versicherung.html">
                         <button class="btn" style="background-color:#98C00A; color: white">Mehr erfahren
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
@@ -350,21 +350,21 @@
 
                     <ul class="list-unstyled mb-0 footer-list">
                         <li>
-                            <a href="/rechtlich_html/erstinformation.html"
+                            <a href="rechtlich_html/erstinformation.html"
                                 class="text-white link-footer">Erstinformation</a>
                         </li>
                         <li>
-                            <a href="/rechtlich_html/impressum.html" class="text-white link-footer">Impressum</a>
+                            <a href="rechtlich_html/impressum.html" class="text-white link-footer">Impressum</a>
                         </li>
                         <li>
-                            <a href="/rechtlich_html/datenschutz.html" class="text-white link-footer">Datenschutz</a>
+                            <a href="rechtlich_html/datenschutz.html" class="text-white link-footer">Datenschutz</a>
                         </li>
                         <li>
-                            <a href="/rechtlich_html/transparenzverordnung.html"
+                            <a href="rechtlich_html/transparenzverordnung.html"
                                 class="text-white link-footer">Transparenzverordnung</a>
                         </li>
                         <li>
-                            <a href="/rechtlich_html/legal.html" class="text-white link-footer">Legal</a>
+                            <a href="rechtlich_html/legal.html" class="text-white link-footer">Legal</a>
                         </li>
                     </ul>
                 </div>
