--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Navbar brand -->
-            <a class="navbar-brand px-5" href="/index.html">
+            <a class="navbar-brand px-5" href="index.html">
                 <img src="static/logo_1.png" alt="" style="height: 22px;">
             </a>
 
             <!-- Left links -->
             <ul class="navbar-nav pe-5 mb-2 mb-lg-0">
                 <li class="nav-item px-2">
-                    <a class="nav-link active" aria-current="page" href="/index.html">Startseite</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Startseite</a>
                 </li>
                 <li class="nav-item px-2">
                     <a class="nav-link" href="betr_alt.html">Betriebliche <br> Altersversorgung</a>
@@ -107,11 +107,11 @@
                 <h4 class="mt-4">Betriebliche Altersversorgung</h4>
             </a>
             <a href="aerzte_apotheker.html" class="col-2 card-link mx-2 py-5">
-                <img src="static/icons/Icon_Ärzte.png" alt="icon">
+                <img src="static/icons/Icon_aerzte.png" alt="icon">
                 <h4 class="mt-4">Finanzberatung für Ärzte Apotheker</h4>
             </a>
             <a href="verm_management.html" class="col-2 card-link mx-2 py-5">
-                <img src="static/icons/Icon_Vermögen.png" alt="icon">
+                <img src="static/icons/Icon_Vermoegen.png" alt="icon">
                 <h4 class="mt-4">Vermögens- <br> management</h4>
             </a>
             <a href="finanzierung.html" class="col-2 card-link mx-2 py-5">
