--- a/versicherung.html
+++ b/versicherung.html
@@ -21,31 +21,31 @@
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Navbar brand -->
-            <a class="navbar-brand px-5" href="/index.html"> <img src="static/logo_1.png" alt=""></a>
+            <a class="navbar-brand px-5" href="index.html"> <img src="static/logo_1.png" alt=""></a>
 
             <!-- Left links -->
             <ul class="navbar-nav pe-5 mb-2 mb-lg-0">
                 <li class="nav-item px-2">
-                    <a class="nav-link active" aria-current="page" href="/index.html">Startseite</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Startseite</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="/betr_alt.html">Betriebliche <br> Altersversorgung</a>
+                    <a class="nav-link" href="betr_alt.html">Betriebliche <br> Altersversorgung</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="/aerzte_apotheker.html">Finanzberatung für <br>Ärzte und Apotheker</a>
+                    <a class="nav-link" href="aerzte_apotheker.html">Finanzberatung für <br>Ärzte und Apotheker</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="/verm_management.html">Vermögensmanagement</a>
+                    <a class="nav-link" href="verm_management.html">Vermögensmanagement</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="/finanzierung.html">Finanzierung</a>
+                    <a class="nav-link" href="finanzierung.html">Finanzierung</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="/versicherung.html">Versicherungen</a>
+                    <a class="nav-link" href="versicherung.html">Versicherungen</a>
                 </li>
                 <li class="nav-item px-2">
                     <!-- <a class="nav-link" href="#">Kontakt</a> -->
-                    <a href="/kontakt.html" class="nav-link px-4 nav-btn">Kontakt</a>
+                    <a href="kontakt.html" class="nav-link px-4 nav-btn">Kontakt</a>
                 </li>
             </ul>
             <!-- Left links -->
@@ -190,7 +190,7 @@
                         <h5>Haben Sie Fragen oder wünschen Sie sich noch mehr Informationen?</h5>
                         <p class="p-text line-height">Dann vereinbaren Sie gleich einen Beratungstermin und lassen sich
                             zur Betrieblichen Altersvorsorge beraten.</p>
-                        <a href="/kontakt.html">
+                        <a href="kontakt.html">
                             <button class="btn mb-3"
                                 style="background-color:#610556; color: white; border-radius: 20px">Termin
                                 vereinbaren</button>
@@ -218,7 +218,7 @@
                 Wenden Sie sich an Uns. Wir informieren Sie umfassend über die Unterschiedlichen Versicherungen und
                 finden gemeinsam mit Ihnen die beste Lösung für Sie.
             </p>
-            <a href="/kontakt.html">
+            <a href="kontakt.html">
                 <button class="btn mb-3"
                     style="background-color:#610556; color: white; border-radius: 20px; width: auto;">Termin
                     vereinbaren</button>
@@ -262,21 +262,21 @@
 
                     <ul class="list-unstyled mb-0 footer-list">
                         <li>
-                            <a href="/rechtlich_html/erstinformation.html"
+                            <a href="rechtlich_html/erstinformation.html"
                                 class="text-white link-footer">Erstinformation</a>
                         </li>
                         <li>
-                            <a href="/rechtlich_html/impressum.html" class="text-white link-footer">Impressum</a>
+                            <a href="rechtlich_html/impressum.html" class="text-white link-footer">Impressum</a>
                         </li>
                         <li>
-                            <a href="/rechtlich_html/datenschutz.html" class="text-white link-footer">Datenschutz</a>
+                            <a href="rechtlich_html/datenschutz.html" class="text-white link-footer">Datenschutz</a>
                         </li>
                         <li>
-                            <a href="/rechtlich_html/transparenzverordnung.html"
+                            <a href="rechtlich_html/transparenzverordnung.html"
                                 class="text-white link-footer">Transparenzverordnung</a>
                         </li>
                         <li>
-                            <a href="/rechtlich_html/legal.html" class="text-white link-footer">Legal</a>
+                            <a href="rechtlich_html/legal.html" class="text-white link-footer">Legal</a>
                         </li>
                     </ul>
                 </div>
