--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
     <span class="anchor" id="Startseite"></span>
     <div class="container-fluid start-d">
         <div class="row">
+            <div class="col-6"></div>
             <div class="col-5 start-content-d">
-                <div class="start-text-d animation">
+                <div class="start-text-d animation" style="padding: 20px; background-color: #F5F3EE; color: black;">
                     <h3>Bauen Sie Ihr Vermögen auf und erhalten Sie kompetente Beratung!</h3>
                     <p> Bei uns erhalten Sie eine exzellente Beratung beim Aufbau und der Verwaltung Ihres Vermögens.
                         Wir kümmern uns um Ihre finanziellen Ziele und helfen Ihnen, aus Ihrem Geld das Beste zu machen.
@@ -69,7 +70,7 @@
 
                     <p>Nutzen Sie jetzt unser Kontaktformular und vereinbaren Sie ein Beratungsgespräch – Zögern Sie
                         nicht!</p>
-
+                        <h3>Nutzen Sie unsere unverbindliche Online Beratung!</h3>
                 </div>
             </div>
         </div>
@@ -133,7 +134,7 @@
                     <img class src="static/design_comp-purple.png" alt="png-design">
                 </div>
                 <div class="design-pic">
-                    <img src="static/template-img.jpeg" alt="">
+                    <img src="static/altersvorsorge.jpg" alt="">
                 </div>
             </div>
 
@@ -168,7 +169,7 @@
                 <h3 class="py-5">Wir bieten ihnen Finanzberatung für Ärzte <br> Apotheker an</h3>
                 <p class='p-text'>Qualifizierte Finanzberatung für Ärzte, Zahnärzte und Apotheker. <br> Wir beraten und
                     begleiten seit 1999
-                    Human Ärzte, Zahnärzte und Apotheker
+                    Ärzte, Zahnärzte und Apotheker
                     <br> in allen Finanzfragen für Anspruchsvolle Kunden.
                 </p>
             </div>
@@ -176,31 +177,31 @@
         <div class="row justify-content-center text-center py-4">
             <div class="col-2 card-link-2 mx-2">
                 <div class="my-3 mx-4">
-                    <img src="static/template-img.jpeg" alt="icon">
+                    <img src="static/icons/Icon_Vermoegen.png" alt="icon">
                 </div>
                 <h4 class="mt-3">Existenzgründung</h4>
             </div>
             <div class="col-2 card-link-2 mx-4">
                 <div class="my-3 mx-4">
-                    <img src="static/template-img.jpeg" alt="icon">
+                    <img src="static/icons/Icon_Finanzen.png" alt="icon">
                 </div>
                 <h4 class="mt-3">Praxisfinanzierung</h4>
             </div>
             <div class="col-2 card-link-2 mx-4">
                 <div class="my-3 mx-4">
-                    <img src="static/template-img.jpeg" alt="icon">
+                    <img src="static/icons/Icon_Versicherung.png" alt="icon">
                 </div>
                 <h4 class="mt-3">Praxisversicherung</h4>
             </div>
             <div class="col-2 card-link-2 mx-4">
                 <div class="my-3 mx-4">
-                    <img src="static/template-img.jpeg" alt="icon">
+                    <img src="static/icons/Icon_aerzte.png" alt="icon">
                 </div>
                 <h4 class="mt-3">Praxisübernahme <br> und Verkauf</h4>
             </div>
         </div>
         <div class="row justify-content-center text-center">
-            <a href="betr_alt.html">
+            <a href="aerzte_apotheker.html">
                 <button class="btn">Mehr erfahren
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
@@ -237,7 +238,7 @@
                     <img class src="static/design-comp-green.png" alt="png-design">
                 </div>
                 <div class="design-pic-right">
-                    <img src="static/template-img.jpeg" alt="">
+                    <img src="static/vermoegensmanagement.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -250,7 +251,7 @@
                     <img class src="static/design_comp-purple.png" alt="png-design">
                 </div>
                 <div class="design-pic">
-                    <img src="static/template-img.jpeg" alt="">
+                    <img src="static/finanzierung.jpg" alt="">
                 </div>
             </div>
 
@@ -307,7 +308,7 @@
                     <img class src="static/design-comp-green.png" alt="png-design">
                 </div>
                 <div class="design-pic-right">
-                    <img src="static/template-img.jpeg" alt="">
+                    <img src="static/versicherung.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -324,22 +325,7 @@
                 <div class="col-md-6">
                     <div class="icon-footer-div py-2">
                         <img src="static/logo_2.png" alt="">
-                        <div class="soc">
 
-                            <a href="#" class="icon facebook" title="Facebook">
-                                <svg viewBox="0 0 512 512">
-                                    <path
-                                        d="M211.9 197.4h-36.7v59.9h36.7V433.1h70.5V256.5h49.2l5.2-59.1h-54.4c0 0 0-22.1 0-33.7 0-13.9 2.8-19.5 16.3-19.5 10.9 0 38.2 0 38.2 0V82.9c0 0-40.2 0-48.8 0 -52.5 0-76.1 23.1-76.1 67.3C211.9 188.8 211.9 197.4 211.9 197.4z" />
-                                </svg><!--[if lt IE 9]><em>Facebook</em><![endif]-->
-                            </a>
-
-                            <a href="#" class="icon linkedin" title="LinkedIn">
-                                <svg viewBox="0 0 512 512">
-                                    <path
-                                        d="M186.4 142.4c0 19-15.3 34.5-34.2 34.5 -18.9 0-34.2-15.4-34.2-34.5 0-19 15.3-34.5 34.2-34.5C171.1 107.9 186.4 123.4 186.4 142.4zM181.4 201.3h-57.8V388.1h57.8V201.3zM273.8 201.3h-55.4V388.1h55.4c0 0 0-69.3 0-98 0-26.3 12.1-41.9 35.2-41.9 21.3 0 31.5 15 31.5 41.9 0 26.9 0 98 0 98h57.5c0 0 0-68.2 0-118.3 0-50-28.3-74.2-68-74.2 -39.6 0-56.3 30.9-56.3 30.9v-25.2H273.8z" />
-                                </svg><!--[if lt IE 9]><em>LinkedIn</em><![endif]-->
-                            </a>
-                        </div>
                     </div>
                 </div>
                 <!--Grid column-->
@@ -350,21 +336,14 @@
 
                     <ul class="list-unstyled mb-0 footer-list">
                         <li>
-                            <a href="rechtlich_html/erstinformation.html"
+                            <a href="erstinformation.html"
                                 class="text-white link-footer">Erstinformation</a>
                         </li>
                         <li>
-                            <a href="rechtlich_html/impressum.html" class="text-white link-footer">Impressum</a>
+                            <a href="impressum.html" class="text-white link-footer">Impressum</a>
                         </li>
                         <li>
-                            <a href="rechtlich_html/datenschutz.html" class="text-white link-footer">Datenschutz</a>
-                        </li>
-                        <li>
-                            <a href="rechtlich_html/transparenzverordnung.html"
-                                class="text-white link-footer">Transparenzverordnung</a>
-                        </li>
-                        <li>
-                            <a href="rechtlich_html/legal.html" class="text-white link-footer">Legal</a>
+                            <a href="datenschutz.html" class="text-white link-footer">Datenschutz</a>
                         </li>
                     </ul>
                 </div>
@@ -373,21 +352,7 @@
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                     <p style="font-weight: bold;">Kontaktieren Sie uns: </p>
-
-                    <ul class="list-unstyled footer-list">
-                        <li>
-                            Straße
-                        </li>
-                        <li>
-                            69181 Mannheim
-                        </li>
-                        <li>
-                            Daniel Adamovic
-                        </li>
-                        <li>
-                            medFinance
-                        </li>
-                    </ul>
+                    <a href="kontakt.html" style="text-decoration: none; color: white;">Kontakt</a>
                 </div>
                 <!--Grid column-->
             </div>
