--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav id="navbar-desktop" class="navbar navbar-expand-lg fixed-top">
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Navbar brand -->
@@ -55,7 +55,48 @@
         </div>
         <!-- Container wrapper -->
     </nav>
-    <!-- Navbar -->
+    <!-- Navbar end-->
+
+    <!-- Navbar mobile -->
+    <nav id="navbar-mobile" class="navbar navbar-light sticky-top navbar-expand-lg">
+        <a class="navbar-brand" href="#" title="Startseite">
+            <img class="logo-navbar navbar-brand" src="static/logo_1.png" alt="medfinance Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            style="margin-right: 10px;" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">
+            </span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end me-5" id="navbarSupportedContent">
+
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="betr_alt.html">Betriebliche Altersversorgung</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="aerzte_apotheker.html">Finanzberatung für Ärzte und Apotheker</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="verm_management.html">Vermögensmanagement</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="finanzierung.html">Finanzierung</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="versicherung.html">Versicherungen</a>
+                </li>
+                <li class="nav-item px-2">
+                    <!-- <a class="nav-link" href="#">Kontakt</a> -->
+                    <a href="kontakt.html" class="nav-link">Kontakt</a>
+                </li>
+            </ul>
+
+
+        </div>
+    </nav>
+
+    <!-- Navbar mobile end-->
 
     <span class="anchor" id="Startseite"></span>
     <div class="container-fluid start-d">
@@ -70,7 +111,7 @@
 
                     <p>Nutzen Sie jetzt unser Kontaktformular und vereinbaren Sie ein Beratungsgespräch – Zögern Sie
                         nicht!</p>
-                        <h3>Nutzen Sie unsere unverbindliche Online Beratung!</h3>
+                    <h3>Nutzen Sie unsere unverbindliche Online Beratung!</h3>
                 </div>
             </div>
         </div>
@@ -97,7 +138,8 @@
     <div class="container-flow bg-beige py-5">
         <div class="row py-5">
             <div class="col-12 text-center reveal">
-                <h2 style="color:#98C00A; font-family: handwrittenFont;">„Eine Investition in Wissen bringt immer noch die besten Zinsen“</h2>
+                <h2 style="color:#98C00A; font-family: handwrittenFont;">„Eine Investition in Wissen bringt immer noch
+                    die besten Zinsen“</h2>
                 <h3 style="font-style: italic;">Benjamin Franklin</h3>
             </div>
         </div>
@@ -336,8 +378,7 @@
 
                     <ul class="list-unstyled mb-0 footer-list">
                         <li>
-                            <a href="erstinformation.html"
-                                class="text-white link-footer">Erstinformation</a>
+                            <a href="erstinformation.html" class="text-white link-footer">Erstinformation</a>
                         </li>
                         <li>
                             <a href="impressum.html" class="text-white link-footer">Impressum</a>
@@ -376,18 +417,18 @@
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
 <script>
-    $(document).ready(function () {
-        $(window).on('scroll', function () {
-            var $nav = $('.navbar');
-            var scrollTop = $(this).scrollTop();
+    // $(document).ready(function () {
+    //     $(window).on('scroll', function () {
+    //         var $nav = $('.navbar');
+    //         var scrollTop = $(this).scrollTop();
 
-            if (scrollTop > 0) {
-                $nav.addClass('navbar-solid');
-            } else {
-                $nav.removeClass('navbar-solid');
-            }
-        });
-    });
+    //         if (scrollTop > 0) {
+    //             $nav.addClass('navbar-solid');
+    //         } else {
+    //             $nav.removeClass('navbar-solid');
+    //         }
+    //     });
+    // });
 </script>
 <script>
     function reveal() {
