--- a/versicherung.html
+++ b/versicherung.html
@@ -17,7 +17,7 @@
 
     <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav id = "navbar-desktop" class="navbar navbar-expand-lg fixed-top">
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Navbar brand -->
@@ -53,7 +53,48 @@
         </div>
         <!-- Container wrapper -->
     </nav>
-    <!-- Navbar -->
+    <!-- Navbar End-->
+
+     <!-- Navbar mobile -->
+     <nav id="navbar-mobile" class="navbar navbar-light sticky-top navbar-expand-lg">
+        <a class="navbar-brand" href="#" title="Startseite">
+            <img class="logo-navbar navbar-brand" src="static/logo_1.png" alt="medfinance Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            style="margin-right: 10px;" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">
+            </span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end me-5" id="navbarSupportedContent">
+
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="betr_alt.html">Betriebliche Altersversorgung</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="aerzte_apotheker.html">Finanzberatung für Ärzte und Apotheker</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="verm_management.html">Vermögensmanagement</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="finanzierung.html">Finanzierung</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="versicherung.html">Versicherungen</a>
+                </li>
+                <li class="nav-item px-2">
+                    <!-- <a class="nav-link" href="#">Kontakt</a> -->
+                    <a href="kontakt.html" class="nav-link">Kontakt</a>
+                </li>
+            </ul>
+
+
+        </div>
+    </nav>
+
+    <!-- Navbar mobile end-->
 
     <div class="jumbotron">
         <div class="img-cont">
