--- a/impressum.html
+++ b/impressum.html
@@ -59,7 +59,7 @@
 
     <!-- Navbar mobile -->
     <nav id="navbar-mobile" class="navbar navbar-light sticky-top navbar-expand-lg">
-        <a class="navbar-brand" href="#" title="Startseite">
+        <a class="navbar-brand" href="index.html" title="Startseite">
             <img class="logo-navbar navbar-brand" src="static/logo_1.png" alt="medfinance Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
